<resources>
    <string name="app_name">QIRobotLauncher</string>
    <string name="device_status_info_title" translatable="false">Device Status</string>
    <string name="action_activation" translatable="false">Robot Activation</string>
    <string name="navigation_not_working" translatable="false">navigation is not working now</string>
    <string name="navigation_drawer_open" translatable="false">drawer open</string>
    <string name="navigation_drawer_close" translatable="false">drawer close</string>
    <string name="spinner_prompt" translatable="false">asdtest</string>
    <string name="string_gkr_start" translatable="false">GKR Start</string>
    <string name="string_gkr_running" translatable="false">GKR is running now</string>
    <string name="string_reboot_robot" translatable="false">Reboot Robot Please</string>
    <string name="string_map_loading_fail" translatable="false">MAP LOADING FAILED</string>
    <string name="string_out_of_area" translatable="false">OUT OF AREA</string>
    <string name="string_location_error" translatable="false">SALM ERROR</string>
    <string name="string_emergency" translatable="false">EMERGENCY</string>
    <string name="string_bumper_detect" translatable="false">BUMPER_DETECT</string>
    <string name="string_ok" translatable="false">OK</string>
    <string name="total_items">(총 {d0}건)</string>
    <string name="total_people">(총 {d0}인)</string>
    <string name="cancel">취소</string>
    <string name="no">아니요</string>
    <string name="yes">네</string>
    <string name="confirm">확인</string>
    <string name="go_main">메인화면으로 돌아가기</string>
    <string name="answer">제가 찾은 정보입니다.</string>
    <string name="scroll">위아래로 스크롤 하세요.</string>
    <string name="battery" translatable="false">배터리 : {d0}%</string>
    <string name="gnb_t1" translatable="false"></string>
    <string name="gnb_b1">\"하이 큐아이\"라고 부르거나, 마이크 버튼을 터치하세요.</string>
    <string name="gnb_b2">자막 보기</string>
    <string name="gnb_x1" translatable="false">큐아이를 QR로도 만나보세요.</string>
    <string name="main_x1" translatable="false">웅진백제의 역사와 문화,\n함께하는 박물관</string>
    <string name="main_t1" translatable="false">안녕하세요? 만나서 반갑습니다. 저는 국립공주박물관 안내 로봇 큐아이입니다. 제가 관람에 도움을 드릴까요? 원하시는 메뉴를 선택해 주세요.</string>
    <string name="main_t2" translatable="false">원하시는 메뉴를 선택해 주세요.</string>
    <string name="main_b1" translatable="false">공주박물관\n소개</string>
    <string name="main_b2" translatable="false">전시품 소개</string>
    <string name="main_b3" translatable="false">위치 안내</string>
    <string name="main_b4" translatable="false">웅진백제실 해설</string>
    <string name="docking_t1" translatable="false">충전기에 들어가는 중입니다. 잠시만 뒤로 물러서 주세요.</string>
    <string name="docking_x1" translatable="false">충전기에 들어가는 중입니다.</string>
    <string name="docking_x2" translatable="false">잠시만 뒤로 물러서 주세요.</string>
    <string name="undocking_t1" translatable="false">충전기에서 나오는 중입니다. 잠시만 뒤로 물러서 주세요.</string>
    <string name="undocking_x1" translatable="false">충전기에서 나오는 중입니다.</string>
    <string name="undocking_x2" translatable="false">잠시만 뒤로 물러서 주세요.</string>
    <string name="move_charge_t1" translatable="false">죄송하지만 배가 고파서 밥을 먹으러 가야겠어요. 서비스를 계속 이용하고 싶으시다면 절 따라오세요.</string>
    <string name="move_charge_t2" translatable="false">조심하세요. 제가 지나갈 수 있도록 옆으로 비켜주세요.</string>
    <string name="move_charge_x1" translatable="false">충전이 필요합니다.</string>
    <string name="move_charge_x2" translatable="false">잠시 후 서비스를 이용해 주세요.</string>
    <string name="move_server_t1" translatable="false">이동 중 입니다. 잠시만 뒤로 물러서 주세요.</string>
    <string name="move_server_t2" translatable="false">조심하세요. 제가 지나갈 수 있도록 옆으로 비켜주세요.</string>
    <string name="move_server_x1" translatable="false">이동 중 입니다.</string>
    <string name="move_server_x2" translatable="false">지금은 관제 센터에서 제어 중으로\n잠시 후 서비스를 이용해 주세요.</string>
    <string name="emergency_t1" translatable="false">문제 상황 발생으로 운영을 잠시 중단합니다.</string>
    <string name="emergency_x1">문제 상황 발생으로</string>
    <string name="emergency_x2">운영을 잠시 중단합니다.</string>
    <string name="emergency_x3" translatable="false">배터리 / {d0}%</string>
    <string name="failed_t1" translatable="false">경로 탐색 실패로 운영을 잠시 중단합니다.</string>
    <string name="failed_x1">길을 잃어버렸어요!</string>
    <string name="failed_x2">운영을 잠시 중단합니다.</string>
    <string name="server_control_t1" translatable="false"></string>
    <string name="server_control_x1">관제 센터 제어 중</string>
    <string name="server_control_x2">큐레이팅봇이 갑자기 움직일 수 있으니 \n다치지 않도록 조심하세요.</string>
    <string name="ros_t1" translatable="false"></string>
    <string name="ros_x1">로봇 재부팅 필요!</string>
    <string name="ros_x2">관리자에게 문의해 주세요.</string>
    <string name="reminding_t1" translatable="false"></string>
    <string name="reminding_x1" translatable="false">기억을 회상하는 중입니다.</string>
    <string name="reminding_x2" translatable="false">잠시만 기다려 주세요.</string>
    <string name="boot_check_t1" translatable="false">프로그램을 시작하는 중입니다. 잠시만 기다려 주세요.</string>
    <string name="boot_check_x1" translatable="false">프로그램을 시작하는 중입니다.\n잠시만 기다려 주세요.</string>
    <string name="boot_check_x2" translatable="false">로봇 위치 (웅진백제실)\n상태 값과 함께 시각을 ‘시:분:초’로 표기</string>
    <string name="boot_check_x3" translatable="false">도킹스테이션 연결 (성공 / 실패)\n상태 값과 함께 시각을 ‘시:분:초’로 표기</string>
    <string name="boot_check_x4" translatable="false">네트워크 접속 (성공 / 실패)\n상태 값과 함께 시각을 ‘시:분:초’로 표기</string>
    <string name="boot_check_x5" translatable="false">관련 프로세트 (성공 / 실패)\n상태 값과 함께 시각을 ‘시:분:초’로 표기</string>
    <string name="boot_check_x6" translatable="false">챗봇 연결 (성공 / 실패)\n상태 값과 함께 시각을 ‘시:분:초’로 표기</string>
    <string name="boot_check_x7" translatable="false">디스크 용량 (사용량, % 사용 중으로 표기)</string>
    <string name="boot_check_x8" translatable="false">총 00GB</string>
    <string name="boot_check_x9" translatable="false">최종 부팅 (성공 / 실패)\n상태 값과 함께 시각을 ‘시:분:초’로 표기</string>
    <string name="boot_check_x10" translatable="false">YYYY_MM_DD hh:mm:ss 표기</string>
    <string name="charging_t1" translatable="false"></string>
    <string name="charging_x1" translatable="false">충전이 필요합니다. \nCharging is required.</string>
    <string name="charging_x2" translatable="false">잠시 후 서비스를 이용해 주세요.\nPlease use the service after a while.</string>
    <string name="docking_guide_t1" translatable="false">안전한 운영을 위해 충전기로 이동 후 부팅하는 건 어떠세요?</string>
    <string name="docking_guide_x1" translatable="false">충전기로 이동할까요?</string>
    <string name="docking_guide_x2" translatable="false">안전한 운영을 위해\n충전기에서 로봇 부팅하는 걸 추천 드려요.</string>
    <string name="docking_guide_b1" translatable="false">충전기로 이동</string>
    <string name="docking_guide_b2" translatable="false">제자리에서 이용</string>
    <string name="alert_t1" translatable="false"></string>
    <string name="alert_b1" translatable="false">메인 화면으로 돌아가기</string>
    <string name="alert_x1" translatable="false">3D 맵 연결 실패</string>
    <string name="alert_x2" translatable="false">3D 맵 불러오기를 실패했습니다.\n잠시 후 다시 이용하시는 건 어떠세요?</string>
    <string name="alert_x3" translatable="false">이동 안내 불가</string>
    <string name="alert_x4" translatable="false">배터리를 충전하는 중입니다. \n잠시 후 다시 이용하시는 건 어떠세요?</string>
    <string name="alert_x5" translatable="false">네트워크 없음</string>
    <string name="alert_x6" translatable="false">네트워크 연결이 끊어졌습니다.\n잠시 후 다시 이용하시는 건 어떠세요?</string>
    <string name="alert_x7" translatable="false">데이터 연동 실패</string>
    <string name="alert_x8" translatable="false">데이터 불러오기에 실패했습니다.\n잠시 후 다시 이용하시는 건 어떠세요?</string>
    <string name="alert_x9" translatable="false">동행 안내 불가</string>
    <string name="alert_x10" translatable="false">동행 안내가 불가합니다. \n다른 서비스를 이용하시는 건 어떠세요?</string>
    <string name="alert_x11" translatable="false">서비스 점검 중</string>
    <string name="alert_x12" translatable="false">현재 서비스 점검 중으로 \n다른 서비스를 이용해 주세요.</string>
    <string name="standby_t1" translatable="false">도움이 필요하신가요? 제가 도와드리겠습니다.</string>
    <string name="standby_t2" translatable="false">안녕하세요. 국립공주박물관을 방문해 주셔서 감사합니다.</string>
    <string name="standby_t3" translatable="false">환영합니다. 국립공주박물관에서 즐거운 시간 보내세요.</string>
    <string name="standby_t4" translatable="false">궁금한 것이 있다면 저에게 물어봐 주세요.</string>
    <string name="standby_t5" translatable="false">전시실 내에서는 뛰지 마시고 여유롭게 관람해 주세요.</string>
    <string name="standby_x1" translatable="false">무엇을 도와드릴까요?</string>
    <string name="docent_standby_t1" translatable="false">안녕하세요. 저는 큐아이입니다.</string>
    <string name="docent_standby_x1" translatable="false">안녕하세요!</string>
    <string name="docent_standby_x2" translatable="false">저는 큐아이입니다.</string>
    <string name="move_standby_t1" translatable="false">국립공주박물관 방문을 환영합니다.</string>
    <string name="move_standby_x1" translatable="false">국립공주박물관\n방문을 환영합니다.</string>
    <string name="promote_normal_t1" translatable="false">주행을 시작합니다.</string>
    <string name="promote_normal_t2" translatable="false">조심하세요. 제가 지나갈 수 있도록 옆으로 비켜주세요.</string>
    <string name="promote_normal_x1" translatable="false">이동 중입니다.</string>
    <string name="promote_normal_x2" translatable="false">지나갈 수 있도록 도와주세요.</string>
    <string name="promote_1_t1" translatable="false">국립공주박물관에 오신 것을 환영합니다. 제가 안내를 도와드리겠습니다.</string>
    <string name="promote_1_x1" translatable="false">안내를 도와드리겠습니다.</string>
    <string name="promote_2_t1" translatable="false">어린이를 위한 웅진백제 어린이 체험실로 오세요.</string>
    <string name="promote_2_x1" translatable="false">웅진백제 어린이 체험실</string>
    <string name="promote_2_x2" translatable="false">무령왕릉의 보물을 찾아라!</string>
    <string name="promote_2_x3" translatable="false">본관 건물 입구 기준\n오른쪽에 위치해 있습니다.</string>
    <string name="promote_3_t1" translatable="false">박물관 이용 시 지켜야 하는 관람 질서를 안내해 드립니다.</string>
    <string name="promote_3_x1" translatable="false">관람질서 안내</string>
    <string name="promote_3_x2" translatable="false">음식물(음료) 반입금지</string>
    <string name="promote_3_x3" translatable="false">영상•플래시 •셀카봉 금지</string>
    <string name="promote_3_x4" translatable="false">진열장을 만지거나 기대는 것 금지</string>
    <string name="promote_3_x5" translatable="false">반려동물 출입금지(안내견 제외)</string>
    <string name="promote_3_x6" translatable="false">바퀴달린 신발 이용금지</string>
    <string name="promote_3_x7" translatable="false">전시실에서 뛰거나 소란스러운 행동금지</string>
    <string name="promote_4_t1" translatable="false">국민들에게 열린 충청권역 수장고를 관람하러 오세요.</string>
    <string name="promote_4_x1" translatable="false">충천권역 수장고</string>
    <string name="promote_4_x2" translatable="false">국민들에게 열린 관람형 수장고로 오세요!</string>
    <string name="promote_4_x3" translatable="false">전시동 후문 출구로 나가시면\n충천권역 수장고가 있습니다.</string>
    <string name="information_t1" translatable="false">국립공주박물관을 소개해드리겠습니다. 화면의 내용을 읽어 보시고, 더 궁금한 사항이 있다면 마이크 버튼을 눌러서 질문해 주세요.</string>
    <string name="location_exhibits_x1" translatable="false">웅진백제실 대표 전시품에 대해 자세히\n알아보시려면 버튼을 눌러주세요.</string>
    <string name="location_exhibits_b3" translatable="false">목관</string>
    <string name="location_exhibits_b4" translatable="false">관꾸미개(왕)</string>
    <string name="location_exhibits_b5" translatable="false">묘지석(왕)</string>
    <string name="location_exhibits_b6" translatable="false">금귀걸이(왕)</string>
    <string name="location_exhibits_b7" translatable="false">금동신발(왕)</string>
    <string name="location_exhibits_b8" translatable="false">진묘수</string>
    <string name="move_arrive_1_x1" translatable="false">전시품에 도착하였습니다.</string>
    <string name="move_arrive_1_b1" translatable="false">전시품 설명 보기</string>
    <string name="move_arrive_1_b2" translatable="false">다른 전시품 보기</string>
    <string name="move_arrive_1_b3" translatable="false">홈 화면으로 이동</string>
    <string name="move_arrive_2_x1" translatable="false">전시품에 도착하였습니다.</string>
    <string name="move_arrive_2_b1" translatable="false">해설 듣기</string>
    <string name="move_arrive_2_b2" translatable="false">전시품 설명 보기</string>
    <string name="move_arrive_2_b3" translatable="false">다른 전시품 보기</string>
    <string name="move_arrive_2_b4" translatable="false">홈 화면으로 이동</string>
</resources>