<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gongju_background_5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_arrive_1_b1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="1342px"
        android:id="@+id/b2"
        android:layout_width="490px"
        android:layout_height="160px"
        android:background="@drawable/border"
        android:backgroundTint="@color/select"
        android:text="@string/move_arrive_1_b2" />
    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="1342px"
        android:id="@+id/b3"
        android:layout_width="490px"
        android:layout_height="160px"
        android:background="@drawable/border"
        android:backgroundTint="@color/select"
        android:text="@string/move_arrive_1_b3" />
</androidx.constraintlayout.widget.ConstraintLayout>