<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="1920px"
    android:background="@drawable/gongju_background_5">

    <TextView
        android:id="@+id/move_arrive_x1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268px"
        android:fontFamily="@font/min_sans_black"
        android:text="@string/move_arrive_1_x1"
        android:textColor="@color/text_darkwhite"
        android:textSize="64px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/move_arrive_1_b1"
        android:layout_width="540px"
        android:layout_height="688px"
        android:layout_marginTop="126px"
        android:background="@drawable/arrive_btn"
        android:fontFamily="@font/min_sans_bold"
        android:text="@string/move_arrive_1_b1"
        android:textColor="@color/text_darkwhite"
        android:textSize="48px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/move_arrive_x1" />

    <Button
        android:id="@+id/move_arrive_1_b2"
        android:layout_width="470px"
        android:layout_height="128px"
        android:layout_marginLeft="60px"
        android:layout_marginTop="180px"
        android:background="#333333"
        android:fontFamily="@font/min_sans_black"
        android:text="@string/move_arrive_1_b2"
        android:textColor="@color/text_darkwhite"
        android:textSize="36px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/move_arrive_1_b1" />

    <Button
        android:id="@+id/move_arrive_1_b3"
        android:layout_width="470px"
        android:layout_height="128px"
        android:layout_marginTop="180px"
        android:layout_marginRight="60px"
        android:background="#102329"
        android:fontFamily="@font/min_sans_black"
        android:text="@string/move_arrive_1_b3"
        android:textColor="@color/text_darkwhite"
        android:textSize="36px"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/move_arrive_1_b1" />
</androidx.constraintlayout.widget.ConstraintLayout>